# docx_flattern_tools

./: .gitignore  README.md  pyproject.toml
src/docx_flattern_tools/: __init__.py  docx2md.py  md2docx.py
